Рисование вращающегося плоского прямоугольника (Tree.js)

--- a/index.html
+++ b/index.html
@@ -7,103 +7,70 @@
             H1 {
                 text-align: center;
             }
-            CANVAS {
+            #view {
                 position: absolute;
+                width: 640px;
+                height: 480px;
                 top: calc( 50% - 240px );
                 left: calc( 50% - 320px );
                 box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.8);
+                padding: 0;
             }
         </STYLE>
-        <SCRIPT id="shader-fs" type="x-shader/x-fragment">
-            void main(void) {
-                gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
-            }
-        </SCRIPT>
-        <SCRIPT id="shader-vs" type="x-shader/x-vertex">
-            attribute vec3 aVertexPosition;
-            void main(void) {
-                gl_Position = vec4(aVertexPosition, 1.0);
-            }
-        </SCRIPT>
+        <SCRIPT src="three.min.js"></SCRIPT>
         <SCRIPT type="text/javascript">
-            function getShader(g, type, id) {
-                var source = document.getElementById(id).innerHTML;
-                // создаем шейдер по типу
-                var shader = g.createShader(type);
-                // установка источника шейдера
-                g.shaderSource(shader, source);
-                // компилируем шейдер
-                g.compileShader(shader);
-                if(!g.getShaderParameter(shader, g.COMPILE_STATUS)) {
-                    alert("Ошибка компиляции шейдера: " + g.getShaderInfoLog(shader));
-                    g.deleteShader(shader);
-                    return null;
+            window.onload = function(){
+                var camera, scene, renderer, geometry, material, mesh;
+                init();
+                animate();
+
+                // инициализация начальных значений
+                function init() {
+                    // создаем камеру - перспективная проекция
+                    camera = new THREE.PerspectiveCamera(75, 640 / 480, 1, 1000);
+                    // установка z-координаты камеры
+                    camera.position.z = 600;
+                    // настройка сцены
+                    scene = new THREE.Scene();
+                    // настройка геометрии - в качестве геометрии будет куб
+                    // настроим его ширину, высоту и длину по оси z
+                    //geometry = new THREE.CubeGeometry(200, 200, 200);
+                    geometry = new THREE.Geometry();
+                    geometry.vertices.push(
+                        new THREE.Vector3(100, 100, 0),
+                        new THREE.Vector3(100, -100, 0),
+                        new THREE.Vector3(-100, -100, 0),
+                        new THREE.Vector3(-100, 100, 0)
+                    );
+                    geometry.faces.push(new THREE.Face3(0, 1, 2));
+                    geometry.faces.push(new THREE.Face3(2, 3, 0));
+                    // настройка материала - установка цвета
+                    material = new THREE.MeshBasicMaterial({ color: 0xff7f00, wireframe: false});
+                    // настраиваем меш, который будет отображать куб
+                    mesh = new THREE.Mesh(geometry, material);
+                    scene.add(mesh);
+                    // создаем объект для рендеринга сцены
+                    renderer = new THREE.WebGLRenderer();
+                    // установка размеров
+                    renderer.setSize(640, 480);
+                    // встраиваем в DOM-структуру страницы
+                    document.getElementById("view").appendChild(renderer.domElement);
                 }
-                return shader;
-            }
 
-            function initShaders(g) {
-                var fragmentShader = getShader(g, g.FRAGMENT_SHADER, "shader-fs");
-                var vertexShader = getShader(g, g.VERTEX_SHADER, "shader-vs");
-                if(fragmentShader != null && vertexShader != null) {
-                    // создать шейдерную программу
-                    var shaderProgram = g.createProgram();
-                    g.attachShader(shaderProgram, vertexShader);
-                    g.attachShader(shaderProgram, fragmentShader);
-                    g.linkProgram(shaderProgram);
-                    // Если создать шейдерную программу не удалось, вывести предупреждение
-                    if(g.getProgramParameter(shaderProgram, g.LINK_STATUS)) {
-                        g.useProgram(shaderProgram);
-                        shaderProgram.vertexPositionAttribute = g.getAttribLocation(shaderProgram, "aVertexPosition");
-                        g.enableVertexAttribArray(shaderProgram.vertexPositionAttribute);
-                        return shaderProgram;
-                    } else {
-                        alert("Ошибка инициализации шейдеров");
-                    }
-                }
-                return null;
-            }
-
-            function initBuffer(g) {
-                var buffer = g.createBuffer();
-                g.bindBuffer(g.ARRAY_BUFFER, buffer);
-                var vertices = [
-                     0.5,  0.5, 0.0,
-                    -0.5,  0.5, 0.0,
-                     0.5, -0.5, 0.0,
-                    -0.5, -0.5, 0.0
-                ];
-                g.bufferData(g.ARRAY_BUFFER, new Float32Array(vertices), g.STATIC_DRAW);
-                buffer.itemSize = 3;
-                buffer.numberOfItems = 4;
-                return buffer;
-            }
-
-            function drawScene(g, shaderProgram, buffer) {
-                g.viewport(0, 0, g.viewportWidth, g.viewportHeight);
-                g.clear(g.COLOR_BUFFER_BIT | g.DEPTH_BUFFER_BIT);
-                g.vertexAttribPointer(shaderProgram.vertexPositionAttribute, buffer.itemSize, g.FLOAT, false, 0, 0);
-                g.drawArrays(g.TRIANGLE_STRIP, 0, buffer.numberOfItems);
-            }
-
-            window.onload = function() {
-                var canvas = document.getElementById("view");
-                try {
-                    var g = canvas.getContext("webgl");
-                    g.viewportWidth = canvas.width;
-                    g.viewportHeight = canvas.height;
-                    var shaders = initShaders(g);
-                    var buffer = initBuffer(g);
-                    g.clearColor(0.0, 0.0, 0.0, 1.0);
-                    drawScene(g, shaders, buffer);
-                } catch(e) {
-                    alert("WebGL не поддерживается" + e);
+                // функция анимации
+                function animate() {
+                    requestAnimationFrame(animate);
+                    // вращение меша вокруг осей
+                    mesh.rotation.x += 0.01;
+                    mesh.rotation.y += 0.02;
+                    // рендеринг сцены - метод, производящий по сути отрисовку
+                    renderer.render(scene, camera);
                 }
             }
         </SCRIPT>
     </HEAD>
     <BODY>
         <H1>Пример 3D сцены</H1>
-        <CANVAS id="view" width="648" height="480">Нужна другая версия браузера</CANVAS>
+        <DIV id="view"></DIV>
     </BODY>
 </HTML>
